# dkps

./: .gitignore  README.md  dkps-jokes.py  pyproject.toml  setup.py  simple-behavioral-example.ipynb  simple-example.ipynb  simple-functional-example.ipynb
dkps/: __init__.py  cache.py  dkps.py  embed.py  utils.py
examples/hayden/: 0-model-analysis-loop.ipynb  1-get_error_distributions.ipynb  2-get-cluster-results.ipynb  3-clustering-analysis.ipynb  clustering-analysis.ipynb  fig1.ipynb  fig2.ipynb  fig3.ipynb  model-analysis-loop.ipynb  utils.py
examples/helm/: .gitignore  README.md  Untitled.ipynb  download-math.sh  download-medqa.sh  download-wmt_14.sh  eda.py  extract.py  fig1.ipynb  fig2.ipynb  fig3.ipynb  install.sh  make_table-v2.py  make_table.py  make_table_qselect-v2.py  make_table_qselect.py  model_dkps.py  model_dkps_analysis-holdout.py  model_dkps_analysis-holdout_v2.py  model_dkps_analysis.py  model_dkps_analysis_v2.py  model_dkps_analysis_v3.py  model_dkps_holdout.py  model_dkps_holdout_v2.py  plot_dkps.py  plot_dkps_compare_embeddings.py  plot_qselect.py  print_models.py  run.sh  run_dkps.py  utils.py
examples/helm/download-scripts/: download-legalbench.sh  download-wmt_14.sh
examples/helm/joint/: model_dkps.py  plot_dkps.py  run.sh
examples/helm/joint/parsers/: wmt_14.py
examples/helm/math/: experimental-setup.md  extract.py  model_dkps.py  plot_dkps.py  run.sh
examples/helm/med_dialog/: dkps-med_dialog.py  download.sh  extract-med_dialog.py  run.sh
examples/helm/old/math/: download.sh  extract.py  model_dkps.py  plot_dkps.py
examples/helm/old/med_dialog/: .gitignore  extract.py  model_dkps.py  plot_dkps.py  run.sh
examples/helm/old/wmt_14/: download.sh  extract.py  plot_dkps.py  run.sh
examples/helm/parsers/: __init__.py  legalbench.py  math.py  med_qa.py  wmt_14.py
examples/helm/runners/: dkps.py  qselect.py
examples/helm/wmt_14/: .gitignore  extract.py  model_dkps.py  regression.py  run.sh  run_dkps.py
examples/joke/: dkps-jokes.py
scratch/: oos_scratch.py
