[project]
authors = [{name = "bkj", email = "bkj.322@gmail.com"}]
name = "dkps"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["sklearn-lmer>=0.0.5,<0.0.6"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
dkps = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
gensim = ">=4.3.3,<5"
pip = ">=25.1.1,<26"
sentence-transformers = ">=5.0.0,<6"
datasets = ">=3.6.0,<4"
transformers = ">=4.53.2,<5"
tqdm = ">=4.67.1,<5"
google-genai = ">=1.25.0,<2"
rich = ">=14.0.0,<15"
hyppo = ">=0.5.2,<0.6"
google-cloud-sdk = { version = ">=530.0.0,<531", channel = "conda-forge" }
nltk = ">=3.9.1,<4"
einops = ">=0.8.1,<0.9"
sacrebleu = ">=2.5.1,<3"
linearmodels = ">=6.1,<7"
polars = ">=1.31.0,<2"
