[project]
authors = [{name = "bkj", email = "bkj.322@gmail.com"}]
name = "dkps"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [ "nltk>=3.9.1,<4", "graspologic @ git+https://github.com/jataware/graspologic", "jlai @ git+https://github.com/jataware/jlai"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
dkps = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pip = ">=25.1.1,<26"
tqdm = ">=4.67.1,<5"
google-genai = ">=1.25.0,<2"
rich = ">=14.0.0,<15"
google-cloud-sdk = { version = ">=530.0.0,<531", channel = "conda-forge" }
einops = ">=0.8.1,<0.9"
sacrebleu = ">=2.5.1,<3"
scipy = ">=1.16.0,<2"
scikit-learn = ">=1.7.1,<2"
networkx = ">=3.5,<4"
pandas = ">=2.3.1,<3"
beartype = ">=0.21.0,<0.22"

[tool.hatch.metadata]
allow-direct-references = true
